[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "striker-telegram"
version = "0.1.0"
description = "Striker Telegram Package to send and edit messages"
readme = "README.md"
authors = [
    { name = "enzoustk" }
]

dependencies = [
    "requests>=2.0",
]

# Para incluir automaticamente a pasta 'telegram_utils'
[tool.setuptools.packages]
find = {}